Required updates have been completed

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -2175,7 +2175,8 @@
           "reviewDocuments": "Review Documents",
           "viewProducts": "View Products",
           "approve": "Approve",
-          "reject": "Reject"
+          "reject": "Reject",
+          "view": "View"
         },
         "status": {
           "pending": "Pending",
