--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -2994,7 +2994,8 @@
           "reviewDocuments": "Belgeleri İncele",
           "viewProducts": "Ürünleri Görüntüle",
           "approve": "Onayla",
-          "reject": "Reddet"
+          "reject": "Reddet",
+          "view": "Görüntüle"
         },
         "status": {
           "pending": "Beklemede",
