chore(companies): applied general edits and cleanup

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -2216,6 +2216,15 @@
           "rejected": "Rejected",
           "pending": "Pending"
         },
+        "companies" : {
+           "details" : {
+            "title" : "Company Details",
+            "description" : "View and manage company details",
+            "columns" : {
+              
+            }
+           }
+        },
         "companyInfo": {
           "title": "Company Information",
           "email": "Email",
