fix: resolve document count display and status update issues in admin panel

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -411,7 +411,8 @@
         "DELETED": "Deleted",
         "draft": "Draft",
         "new": "New",
-        "archived": "Archived"
+        "archived": "Archived",
+        "deleted": "Deleted"
       }
     },
     "menu": {
