--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -850,7 +850,8 @@
         "DELETED": "Silindi",
         "draft": "Taslak",
         "new": "Yeni",
-        "archived": "Arşivlendi"
+        "archived": "Arşivlendi",
+        "deleted": "Silindi"
       }
     },
     "time": {
