--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -2133,9 +2133,7 @@
         "confirm": "Reject"
 
       },
-      "description":{
-        "forManufacturer":"View and manage your company documents and certificates"
-      },
+   "description": "View and manage your company documents and certificates",
       "columns": {
         "document": "Document",
         "type": "Type",
