--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -2906,9 +2906,7 @@
         "cancel": "İptal",
         "confirm": "Reddet"
       },
-      "description":{
-        "forManufacturer":"Üretici belgelerini görüntüleyin ve yönetin"
-      },
+      "description": "Üretici belgelerini görüntüleyin ve yönetin",
       "categories": {
         "testReports": "Test Raporları",
         "qualityManagement": "Kalite Yönetimi",
